--- a/public/html/Registro.html
+++ b/public/html/Registro.html
@@ -9,8 +9,9 @@
 <body>
 
     <div class="registro-container">
-        <h1>Crear cuenta</h1>
+        <h1>REGISTRO</h1>
         <form id="registroForm">
+            <h2><strong>1: Inicio sesión</strong></h2>
             <div class="form-group">
                 <label for="nombre_usuario">Nombre de usuario</label>
                 <input type="text" id="nombre_usuario" name="nombre_usuario" required>
@@ -28,6 +29,8 @@
                 <input type="number" id="edad" name="edad" min="18" max="80" required>
             </div>
             <button type="submit">Registrarse</button>
+            <h3>2: Datos Personales</h3>
+            <h4>3: </h4>
         </form>
         <p>¿Ya tienes cuenta? <a href="login.html">Iniciar sesión</a></p>
     </div>
