--- a/public/html/Registro.html
+++ b/public/html/Registro.html
@@ -1,47 +1,52 @@
-<!DOCTYPE html> 
-<html lang="es"><link rel="stylesheet" href="estilos.css">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registro de Usuario</title>
+    <link rel="stylesheet" href="/public/css/Registro.css">
 </head>
 <body>
-    <div class="gradient">
-        <div class="container">
-            <div class="container-titulo">
-                <h2><strong>FORMULARY</strong></h2>
-            </div>
-                <form>
-                    <h3>Step 1: Your details</h3>
-                    <div class="container-details">
-                        <label for="nombre">Name:</label>
-                        <input type="text" id="nombre" name="nombre" placeholder="First and last name">
+    <h1>Registro de Usuario</h1>
+    <form id="registroForm">
+        <div>
+            <label for="id_usuario">ID de Usuario:</label>
+            <input type="text" id="id_usuario" name="id_usuario" required>
+        </div>
+        <div>
+            <label for="nombre_usuario">Nombre de Usuario:</label>
+            <input type="text" id="nombre_usuario" name="nombre_usuario" required>
+        </div>
+        <div>
+            <label for="contrasena">Contraseña:</label>
+            <input type="password" id="contrasena" name="contrasena" required>
+        </div>
+        <div>
+            <label for="edad">Edad:</label>
+            <input type="number" id="edad" name="edad" required min="18" max="90">
+        </div>
+        <div>
+            <label for="genero">Género:</label>
+            <select id="genero" name="genero">
+                <option value="masculino">Masculino</option>
+                <option value="femenino">Femenino</option>
+                <option value="no binario">No binario</option>
+            </select>
+        </div>
+        <div>
+            <label for="orientacion_sexual">Orientación Sexual:</label>
+            <select id="orientacion_sexual" name="orientacion_sexual">
+                <option value="heterosexual">Heterosexual</option>
+                <option value="bisexual">Bisexual</option>
+                <option value="homosexual">Homosexual</option>
+                <option value="pansexual">Pansexual</option>
+            </select>
+        </div>
+        <button type="submit">Registrar</button>
+    </form>
 
-    <div class="registro-container">
-        <h1>REGISTRO</h1>
-        <form id="registroForm">
-            <h2><strong>1: Inicio sesión</strong></h2>
-            <div class="form-group">
-                <label for="nombre_usuario">Nombre de usuario</label>
-                <input type="text" id="nombre_usuario" name="nombre_usuario" required>
-            </div>
-            <div class="form-group">
-                <label for="contrasena">Contraseña</label>
-                <input type="password" id="contrasena" name="contrasena" required>
-            </div>
-            <div class="form-group">
-                <label for="biografia">Biografía</label>
-                <textarea id="biografia" name="biografia" rows="4"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="edad">Edad</label>
-                <input type="number" id="edad" name="edad" min="18" max="80" required>
-            </div>
-            <button type="submit">Registrarse</button>
-            <h3>2: Datos Personales</h3>
-            <h4>3: </h4>
-        </form>
-        <p>¿Ya tienes cuenta? <a href="login.html">Iniciar sesión</a></p>
-    </div>
-    
+    <script src="/public/js/registro.js"></script>
 </body>
+</html>
+
 
